fix(frontend): make value and deadline visible on kanban
Issue ref: #5569 
PR ref: #5572

--- a/frontend_app_kanban/src/component/KanbanCard.styl
+++ b/frontend_app_kanban/src/component/KanbanCard.styl
@@ -41,6 +41,13 @@ cardWidth = 280px
         &::after
           display none
 
+    &__options
+      font-weight bold
+      font-size metadataFontSize
+      &__deadline
+          display inline
+          & i
+            margin-inline-end textSpacing
     &__description
       overflow-wrap break-word
       display flex
